Kubernetes/ActualBudget/yamls/actual-budget.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: actual-budget
  labels:
    name: actual-budget
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  namespace: actual-budget
  labels:
    app: actual-budget
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: actualbudget/actual-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          volumeMounts:
            - mountPath: /app/user-files
              name: actual-data
      volumes:
        - name: actual-data
          persistentVolumeClaim:
            claimName: actual-budget-pvc
---
kind: Service
metadata:
  name: actual-budget
  namespace: actual-budget
  labels:
    app: actual-budget
apiVersion: v1
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5006
      targetPort: http
  selector:
    app: actual-budget
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: actual-budget-https-redirect
  namespace: actual-budget
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: actual-budget-security
  namespace: actual-budget
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget-websecure
  namespace: actual-budget
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`budget.domain.com`)
      services:
        - name: actual-budget
          port: 5006
          serversTransport: actual-budget-transport
      middlewares:
        - name: actual-budget-security
  tls:
    secretName: budget-urbaman
    options:
      name: actual-budget-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget-web
  namespace: actual-budget
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`budget.domain.com`)
      services:
        - name: actual-budget
          port: 5006
      middlewares:
        - name: actual-budget-https-redirect
